# svt-rs

./: .gitmodules  Cargo.toml  README.md
svt/: Cargo.toml
svt-av1-sys/: Cargo.toml  build.rs  logging.patch  svt-av1.h
svt-av1-sys/src/: lib.rs
svt-hevc-sys/: Cargo.toml  build.rs  logging.patch  svt-hevc.h  version.patch
svt-hevc-sys/src/: lib.rs
svt/examples/: encode.rs
svt/src/: av1.rs  buffer.rs  error.rs  hevc.rs  lib.rs
svt/src/av1/: config.rs  packet.rs
svt/src/av1/config/: cpu_flags.rs
svt/src/hevc/: config.rs  packet.rs
