[package]
name = "svt-hevc-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
anyhow = "1.0"
bindgen = "0.69"
cmake = "0.1"
diffy = "0.3"

[features]
default = ["log"]
log = ["dep:log"]

[dependencies]
log = { version = "0.4", optional = true }

[dev-dependencies]
simple_logger = "4"

